# inferno

./: .dockerignore  .env.example  .gitattributes  .gitignore  .inferno.toml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  API.md  AUDIT_AND_BATCH_GUIDE.md  AUDIT_FEATURES.md  AUDIT_FOLLOW_UPS.md  AUDIT_RISK_ASSESSMENT.md  BATCH_QUEUE_IMPLEMENTATION.md  CACHE_CONFIGURATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPILATION_STATUS_REPORT.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD_API_GUIDE.md  Dockerfile  FEATURE_PRIORITIZATION_MATRIX.md  GETTING_STARTED.md  GITHUB_PROJECT_ORGANIZATION.md  GITHUB_PROJECT_SETUP_INSTRUCTIONS.md  INFERNO_DEVELOPMENT_ROADMAP.md  INSTALLATION_REQUIREMENTS.md  ISSUE_CREATION_INSTRUCTIONS.md  LICENSE  LICENSE-APACHE  LICENSE-HEADER  METAL_GPU_RESULTS.md  METAL_GPU_TESTING.md  MODEL_CONVERSION_GUIDE.md  OPERATIONAL_GAPS_REMEDIATION.md  OPTIMIZATION_REPORT.md  PACKAGE_SYSTEM_SUMMARY.md  QUICK_TEST.md  README.md  (+42 more)
.cargo/: audit.toml  config.toml
.claude/: phase3-arc-audit.md
.claude/plans/: 2025-09-29_macos-desktop-refactor.md  2025-09-29_major-refactoring.md  2025-10-01_phase3-warnings-refactoring.md  CLI_MIGRATION_GUIDE.md  PHASE1-COMPLETE.md  PHASE2-CLI-COMPLETE.md  PHASE2-PROGRESS.md  README.md  module-structure-design.md  phase2-cli-architecture.md  phase2-config-analysis.md  session-notes.md  tauri-migration-audit.md  week1-summary.md
.github/: PULL_REQUEST_TEMPLATE.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  enterprise.yml  feature_request.yml  infrastructure.yml  performance.yml
.github/workflows/: badges.yml  cargo-publish.yml  ci-enhanced.yml  ci.yml  container.yml  deployment.yml  dmg-packaging.yml  docker-publish.yml  documentation.yml  homebrew-update.yml  nightly.yml  npm-publish.yml  performance-ci.yml  pr-feedback.yml  publish.yml  quality-gates.yml  release.yml  unified-release.yml
auth/: ENTERPRISE_AUTH_GUIDE.md  README.md  multi-tenancy-config.yaml  oauth2-config.yaml
benches/: cache_benchmark.rs  concurrent_benchmark.rs  inference_benchmark.rs  memory_benchmark.rs  profiling_benchmark.rs  queue_benchmarks.rs
dashboard/: .env.example  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  healthcheck.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/dashboard/: test_models
dashboard/scripts/: deploy.sh
dashboard/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: activity_logger.rs  backend_manager.rs  database.rs  events.rs  main.rs  model_repository.rs  security.rs
dashboard/test_models/: test.gguf  tinyllama.gguf
desktop-app/: CLAUDE.md  package.json
docs/: API_DOCUMENTATION.md  API_SECURITY.md  API_TESTING_GUIDE.md  ARCHIVE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SECURITY.md  Inferno_API_Postman.json  PERFORMANCE_BENCHMARKING.md  README.md  SECURITY_GUIDE.md
docs/examples/: python.md  rest-api.md
docs/guides/: getting-started.md  production-deployment.md  troubleshooting.md
docs/reference/: api-reference.md  architecture.md  changelog.md  cli-reference.md
docs/tutorials/: package-manager.md  quick-start.md  (+1 more)
examples/: Dockerfile.example  README.md  ab_testing_v2_example.rs  advanced_cache_v2_example.rs  advanced_monitoring_v2_example.rs  api_gateway_v2_example.rs  audit_config.toml  audit_demo.rs  audit_v2_example.rs  backup_recovery_v2_example.rs  batch_processing.rs  batch_queue_v2_example.rs  batch_v2_example.rs  bench_v2_example.rs  cache_persistence_example.md  cache_v2_example.rs  cli_architecture.rs  cli_user_experience_demo.md  config.toml  config_builder.rs  config_v2_example.rs  conversion_test.rs  convert_v2_example.rs  dashboard_api_usage.rs  dashboard_v2_example.rs  data_pipeline_v2_example.rs  deployment_v2_example.rs  distributed_v2_example.rs  docker-compose.yml  enhanced_parser_v2_example.rs  federated_v2_example.rs  fuzzy_v2_example.rs  go_client.go  gpu_v2_example.rs  help_v2_example.rs  javascript_client.js  logging_audit_v2_example.rs  marketplace_v2_example.rs  metrics_v2_example.rs  model_versioning_v2_example.rs  (+29 more)
helm/: HELM_GUIDE.md
homebrew/: inferno-ai.rb  inferno.rb
infrastructure/: README.md
k8s/: README.md
monitoring/: MONITORING_GUIDE.md  README.md  grafana-dashboard.json  grafana-datasource.yaml  prometheus-config.yaml  prometheus-rules.yaml  prometheusrule.yaml  servicemonitor.yaml
performance/: OPTIMIZATION_GUIDE.md  README.md  cache-strategies.yaml  optimization-config.yaml
plans/: 2025-09-21_compilation-reset-plan.md
scripts/: README.md  benchmark.sh  benchmark_metal.sh  build-desktop.sh  build-universal.sh  build.sh  compilation-monitor.sh  compilation_monitor.py  install.ps1  install.sh
src/: ab_testing.rs  ab_testing_config.rs  advanced_cache.rs  advanced_monitoring.rs  api_documentation.rs  api_gateway.rs  audit.rs  backup_recovery.rs  cache.rs  config.rs  conversion.rs  dashboard.rs  data_pipeline.rs  deployment.rs  distributed.rs  federated.rs  gpu.rs  icon_generator.rs  lib.rs  logging_audit.rs  macos_integration.rs  main.rs  marketplace.rs  model_versioning.rs  monitoring.rs  multi_tenancy.rs  multimodal.rs  observability.rs  optimization.rs  performance_baseline.rs  performance_optimization.rs  qa_framework.rs  resilience.rs  response_cache.rs  security.rs  streaming.rs  tauri_app.rs  versioning.rs
tests/: api_integration_tests.rs  audit_system_integration_tests.rs  backend_integration_tests.rs  basic_functionality.rs  batch_processing_integration_tests.rs  batch_queue_integration_tests.rs  cache_persistence_integration_tests.rs  component_unit_tests.rs  conversion_integration_tests.rs  cross_component_integration_tests.rs  dashboard_api_tests.rs  dashboard_api_workflow_tests.rs  end_to_end_tests.rs  error_size_analysis.rs  feature_integration_tests.rs  integration_tests.rs  metal_gpu_test.rs  metal_performance_tests.rs  metrics_thread_safety.rs  performance_stress_tests.rs  platform_integration.rs  profiling_integration_tests.rs  queue_integration_tests.rs
(+304 files in other folders)
