[package]
name = "inferno-desktop"
version = "0.5.0"
description = "Inferno AI Desktop - Silicon-optimized macOS application for offline AI/ML inference"
authors = ["Inferno Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferno-ai/inferno"
edition = "2021"

[[bin]]
name = "inferno-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["macos-private-api", "tray-icon", "image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
num_cpus = "1.0"
sysinfo = "0.30"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
toml = "0.8"
rfd = "0.14"
inferno = { path = "../..", features = ["gguf"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2.1"
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-updater = "2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
